--- a/charts_and_data_preparation/xchart_task/pom.xml
+++ b/charts_and_data_preparation/xchart_task/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>Session6XchartIntegration</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Session6XchartIntegration</name>
+    <name>xchart_task</name>
     <!-- FIXME change it to the project's website -->
 
     <properties>
