--- a/charts_and_data_preparation/joinery_and_tablesaw/pom.xml
+++ b/charts_and_data_preparation/joinery_and_tablesaw/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>JUPAI5_Examples</artifactId>
+    <artifactId>joinery_and_tablesaw</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
